Jython NEWS

Jython 2.7b4
  Bugs Fixed
    - [ 2037 ] Byte-string containing elements greater than 255

Jython 2.7b3
  Bugs Fixed
    - [ 2225 ] Jython+django-jython - no module named site
    - [ 2108 ] Cannot set attribute to instances of AST/PythonTree (blocks pyflakes)
    - [ 1497 ] ast classes do not have appropiate base classes
    - [ 1980 ] ast.Eq, ast.Gt, ast.GtE, ast.In, ast.Is, ast.IsNot, ast.Lt, ast.LtE, ast.NotEq and ast.NotIn should be subclasses of ast.cmpop
    - [ 1981 ] ast.And and ast.Or should be subclasses of ast.boolop
  New Features
    - [ 1896215 ] findResource(s) for SyspathJavaLoader
    - [ 1591 ] Interactive interpreter stuck on '...' loop

Jython 2.7b2
  Bugs Fixed
    - [ 1753 ] zlib doesn't call end() on compress and decompress
    - [ 1860 ] test failures in test_array.py
    - [ 1862 ] cStringIO does not support arrays as arguments
    - [ 1876 ] PYTHONIOENCODING unsupported, used (among others) by PyDev
    - [ 1926 ] Adjust MutableSet.pop test so we do not need to skip it
    - [ 1964 ] time.strptime() does not support %f in format
    - [ 2005 ] threading.Event object's wait([timeout]) function returns null instead of True/False.
    - [ 2013 ] %x hex formatting takes O(N^2) time.
    - [ 2020 ] str.translate should delete characters in the second arg when table is None
    - [ 2027 ] Discrepancy in bin(-num) output
    - [ 2033 ] test_strptime fails: test_mar1_comes_after_feb29_even_when_omitting_the_year
    - [ 2046 ] sys.stdin.readline() hangs when used interactively (JLine, Windows)
    - [ 2060 ] Thread ident missing
    - [ 2071 ] datetime strftime %f does not work
    - [ 2075 ] Incorrect padding for hex format strings
    - [ 2082 ] Unexpected (Pdb) prompt during regression tests
    - [ 2083 ] os.unlink() can delete directories
    - [ 2089 ] sys.stdout not flushed after sys.exit
  New Features
    - Command line option -E (ignore environment variables)